# lab4-testsuite

./: .gitignore  Makefile  README.md  cabal.haskell-ci  plt-test-lab4.cabal  plt-test-lab4.hs  run-test-cabal.sh  run-test-ghc.sh  run-test-stack.sh  stack.yaml
.github/workflows/: haskell-ci.yml  stack.yml
