cabal-version: 2.4

-- Programming Language Technology (Chalmers DAT151 / GU DIT231)
-- (C) 2022-25 Andreas Abel
-- All rights reserved.

name:                      plt-test-lab4
version:                   0.0
author:                    Andreas Abel and the PLT team.
copyright:                 (C) 2022-25 Andreas Abel
license:                   NONE
                           -- All rights reserved.
synopsis:
  Test suite for PLT lab4
description:
  Test suite for Programming Language Technology lab4 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC ==9.12.2 || ==9.10.3 || ==9.8.4 || ==9.6.7 || ==9.4.8 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5

extra-source-files:
  bad/*.hs
  good/*.hs
  good/*.golden

executable plt-test-lab4
  main-is:                 plt-test-lab4.hs
  hs-source-dirs:          .

  default-language:        Haskell2010

  ghc-options:
    -Wall
    -Wcompat

  build-depends:
   -- Lower bounds set to versions shipped with GHC 8.6.5
    , base       >= 4.12.0.0 && < 5
    , directory  >= 1.3.3.0  && < 1.4
    , filepath   >= 1.4.2.1  && < 1.6
    , process    >= 1.6.5.0  && < 1.7

  -- These following tools are not needed to _build_ the testsuite runner,
  -- but to _run_ it, namely to build the parser from the given LBNF file.
  -- Putting them here means they need not be separately installed
  -- when invoking the runner with `cabal run` or `stack run`.

  build-tool-depends:
   -- BNFC 2.8.4 dropped the 'Err' custom type in favor of the standard 'Either'.
      BNFC:bnfc   >= 2.8.4  && < 2.10
   -- Not sure about the lower bounds, so we pick alex and happy versions
   -- that come in the last Stackage LTS (14.27) for GHC 8.6.5.
    , alex:alex   >= 3.2.5   && < 3.6
    , happy:happy >= 1.19.12 && < 2.2
